# agent-sample-v3

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: agent_utils.py  config.py  llm.py  main.py  memory.py  orchestrator.py  schemas.py  service.py
backend/app/agents/: __init__.py  evaluator.py  executor.py  planner.py
backend/tests/: test_agents_isolation.py  test_fanout.py  test_memory.py
docs/: api-spec.html  architecture.html  backend-design.html  frontend-design.html  index.html  memory-design.html  overview.html  sequence-flow.html
docs/assets/: style.css
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  labels.ts  styles.css  types.ts
frontend/src/components/: AgentActivityPanel.tsx  ChatWindow.tsx  Composer.tsx  TaskChecklist.tsx  ThoughtsFeed.tsx
frontend/src/hooks/: useAgentStream.ts
