[project]
name = "agent-backend"
version = "0.1.0"
description = "LangGraph orchestrator-worker AI agent (Planner / Executor / Evaluator) on local Ollama gpt-oss"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.3",
    "langmem>=0.0.20",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
